spelling correction and alignment of text and footer setting for mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -127,9 +127,9 @@ body {
 
 
 #checkbox {
-	position: absolute;
-	top: -99px;
-	cursor: pointer;
+    position: absolute;
+    top: -99px;
+    cursor: pointer;
 }
 
 #label {
@@ -156,7 +156,7 @@ a:hover {
 }
 
 @media screen and (max-width: 1020px) {
-    
+
     .dropdownMenu {
         background-color: white;
         position: absolute;
@@ -165,7 +165,7 @@ a:hover {
         transition: 0.4s;
         padding: 10px;
     }
-    
+
     li {
         display: block;
     }
@@ -174,8 +174,8 @@ a:hover {
         display: inline;
         cursor: pointer;
     }
-    
-    input[type="checkbox"]:checked ~ .dropdownMenu {
+
+    input[type="checkbox"]:checked~.dropdownMenu {
         top: 25px;
     }
 }
@@ -419,33 +419,34 @@ footer {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    margin-left: 2px;
-    margin-right: 2px;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 8px;
 }
 
 footer h4 {
-    font-size: 10px;
+    font-size: 12px;
     color: #fafafa;
     text-transform: uppercase;
 }
 
 footer p {
-    font-size: 10px;
+    font-size: 12px;
     color: #fafafa;
 }
 
 .box-about {
-    width: 25%;
+    width: 50%;
     text-align: center;
 }
 
 .box-contact {
-    width: 25%;
+    width: 50%;
     text-align: center;
 }
 
 .box-social {
-    width: 25%;
+    width: 50%;
     text-align: center;
 }
 
@@ -481,7 +482,7 @@ footer p {
 }
 
 .footer-insurance {
-    width: 25%;
+    width: 50%;
     color: #fafafa;
     font-size: 13px;
     text-align: center;
@@ -505,6 +506,11 @@ footer p {
 /*----------------------------------------Tablet Header*/
 
 @media (min-width: 768px) {
+
+    .navDefault {
+        top: 25px;
+        right: 25px;
+    }
 
     .burger i {
         font-size: 40px;
@@ -533,6 +539,11 @@ footer p {
     .about-intro {
         width: 70%;
     }
+
+    .profile-image {
+        width: 30%;
+    }
+
 
     .brief-description {
         font-size: 20px;
@@ -596,7 +607,7 @@ footer p {
     .contact-form {
         width: 50%;
     }
-    
+
     .button {
         font-size: 20px;
     }
@@ -606,8 +617,8 @@ footer p {
         margin-top: 55px;
     }
 
-    /*----------------------------------------Tablet Treatments*/
 
+    /*----------------------------------------Tablet Treatments*/
     h3 {
         font-size: 30px;
     }
@@ -634,12 +645,33 @@ footer p {
     }
 
     /*----------------------------------------Tablet Footer*/
+    .box-about {
+        width: 25%;
+        text-align: center;
+    }
+
+    .box-contact {
+        width: 25%;
+    }
+
+    .box-social {
+        width: 25%;
+    }
+
+    .social-links {
+        padding-left: 0px;
+    }
+
+    .footer-insurance {
+        width: 25%;
+    }
+
     footer h4 {
-        font-size: 15px;
+        font-size: 18px;
     }
 
     footer p {
-        font-size: 15px;
+        font-size: 18px;
     }
 
     .social-links li a i {
@@ -651,7 +683,7 @@ footer p {
     }
 
     .footer-insurance-logo {
-        width: 40px;
+        width: 50px;
     }
 
 }
@@ -669,7 +701,7 @@ footer p {
     .bg-color-treatments {
         background-color: #fafafa;
     }
-    
+
     .logoimg {
         display: block;
         margin-left: auto;
@@ -693,8 +725,8 @@ footer p {
     }
 
     .dropdownMenu {
-       /* transform: translateY(0);*/
-       visibility: hidden;
+        /* transform: translateY(0);*/
+        visibility: hidden;
     }
 
     .menuitem:hover {
@@ -810,7 +842,6 @@ footer p {
     }
 
     /*----------------------------------------Desktop Treatments*/
-
     .area {
         width: 33%;
     }
